<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:fontFamily="@font/denk_one"
            android:includeFontPadding="false"
            android:text="@string/register_heading"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/custom_input"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <EditText
                android:id="@+id/editTxtName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:drawableStart="@drawable/custom_ic_person"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/rName"
                android:textColor="@color/black"
                android:imeOptions="flagForceAscii"
                android:inputType="textPersonName"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtWarnName" />

            <EditText
                android:id="@+id/editTxtEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:drawableStart="@drawable/custom_ic_email"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/rEmail"
                android:textColor="@color/black"
                android:imeOptions="flagForceAscii"
                android:inputType="textEmailAddress"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtWarnEmail" />

            <EditText
                android:id="@+id/editTxtPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:drawableStart="@drawable/custom_ic_password"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/rPass"
                android:textColor="@color/black"
                android:imeOptions="flagForceAscii"
                android:inputType="textPassword"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtWarnPass" />


            <EditText
                android:id="@+id/editTxtPassRepeat"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:drawableStart="@drawable/custom_ic_password"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/rRepPass"
                android:textColor="@color/black"
                android:imeOptions="flagForceAscii"
                android:inputType="textPassword"
                android:paddingStart="4dp"
                android:paddingEnd="4dp"
                android:textColorHint="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtWarnPassRepeat" />

            <TextView
                android:id="@+id/txtWarnName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/insert_name"
                android:textColor="@color/red_alert"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtWarnEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/insert_email"
                android:textColor="@color/red_alert"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTxtName" />

            <TextView
                android:id="@+id/txtWarnPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/insert_pass"
                android:textColor="@color/red_alert"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTxtEmail" />

            <TextView
                android:id="@+id/txtWarnPassRepeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/insert_repeat_pass"
                android:textColor="@color/red_alert"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTxtPassword" />

            <TextView
                android:id="@+id/txtGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/rGender"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTxtPassRepeat" />

            <RadioGroup
                android:id="@+id/rgGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtGender">

                <RadioButton
                    android:id="@+id/rbMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="40"
                    android:buttonTint="@color/black"
                    android:textColor="@color/black"
                    android:checked="true"
                    android:text="@string/rMale" />

                <RadioButton
                    android:id="@+id/rbFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="35"
                    android:buttonTint="@color/black"
                    android:textColor="@color/black"
                    android:text="@string/rFemale" />

                <RadioButton
                    android:id="@+id/rbOther"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"
                    android:buttonTint="@color/black"
                    android:textColor="@color/black"
                    android:text="@string/rOther" />
            </RadioGroup>

            <Spinner
                android:id="@+id/spinnerCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/countries"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="@+id/txtCountry"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/txtCountry"
                app:layout_constraintTop_toTopOf="@+id/txtCountry" />

            <TextView
                android:id="@+id/txtCountry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:text="@string/rCountry"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@+id/spinnerCountry"
                app:layout_constraintHorizontal_bias="0.51"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rgGender" />

            <TextView
                android:id="@+id/txtAgreement"
                android:layout_width="284dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/rLicenseText"
                android:textAlignment="center"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerCountry" />


            <CheckBox
                android:id="@+id/agreementCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:buttonTint="@color/black"
                android:text="@string/rAgree"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtAgreement" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/btn_shape"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


